# SOC-algorithm

./: README.md  main.py  pyproject.toml  settings.py  traffic_data.xlsx
attacks_detection/: data_leakage.py  port_scan.py  sql_injection.py
helpers/: execl_helper.py
schemes/: network_line.py  results.py
