[tool.poetry]
name = "soc-algorithm"
version = "0.1.0"
description = ""
authors = ["itay.talias <itay.talias@gmail.com>"]
readme = "README.md"
packages = [{include = "soc_algorithm"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
